Update prop names to align with documentation

--- a/src/doc.stories.mdx
+++ b/src/doc.stories.mdx
@@ -6,7 +6,7 @@ import { Meta } from "@ladle/react";
 
 ## Overview
 
-Cantal is a lightweight but powerful grid library for React. Its primary responsibilities are rendering the layout of the grid and exposing grid events. It comes with sane defaults and it's highly customizable.
+Cantal is a lightweight but powerful grid library for React. Its primary responsibilities are rendering an accessible layout of the grid and exposing grid events. It comes with sane defaults and it's highly customizable.
 
 ## Motivation
 
